--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "gradio (>=5.25.2,<6.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
     "langgraph-sdk (>=0.1.61,<0.2.0)",
-    "typing-extensions (>=4.13.2,<5.0.0)"
+    "typing-extensions (>=4.13.2,<5.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
 ]
 
 
