--- a/.github/workflows/frontend-destroy.yml
+++ b/.github/workflows/frontend-destroy.yml
@@ -1,4 +1,4 @@
-name: Project terraform - destroy
+name: Frontend terraform - destroy
 
 on:
   workflow_dispatch:
@@ -16,25 +16,25 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: aws-actions/configure-aws-credentials@v1
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ vars.ROLE_TO_ASSUME }}
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: eu-central-1
 
-      - uses: hashicorp/setup-terraform@v1
+      - uses: hashicorp/setup-terraform@v2
 
       - run: |
           make all
         working-directory: .
 
       - run: terraform init
-        working-directory: terraform
+        working-directory: src/frontend/terraform
 
       - run: terraform plan
-        working-directory: terraform
+        working-directory: src/frontend/terraform
 
       - run: terraform destroy -auto-approve
-        working-directory: terraform
+        working-directory: src/frontend/terraform
