--- a/.github/workflows/frontend-apply.yml
+++ b/.github/workflows/frontend-apply.yml
@@ -23,11 +23,11 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v2
 
-      - run: terraform init
+      - run: terraform init -backend-config=backend-dev.conf -reconfigure
         working-directory: src/frontend/terraform
 
       - run: terraform plan
         working-directory: src/frontend/terraform
 
-      - run: terraform apply -auto-approve
+      - run: terraform apply -auto-approve -auto-approve -var="restore_from_snapshot=true"
         working-directory: src/frontend/terraform
