--- a/.github/workflows/frontend-destroy.yml
+++ b/.github/workflows/frontend-destroy.yml
@@ -30,7 +30,7 @@ jobs:
           make all
         working-directory: .
 
-      - run: terraform init
+      - run: terraform init -backend-config=backend-dev.conf -reconfigure
         working-directory: src/frontend/terraform
 
       - run: terraform plan
