--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "cryptography (>=44.0.2,<45.0.0)",
 ]
 
 
