--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "cryptography (>=44.0.2,<45.0.0)",
+    "langgraph (>=0.3.33,<0.4.0)",
+    "langchain (>=0.3.24,<0.4.0)",
 ]
 
 
