--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "cryptography (>=44.0.2,<45.0.0)",
     "langgraph (>=0.3.33,<0.4.0)",
     "langchain (>=0.3.24,<0.4.0)",
+    "langchain-anthropic (>=0.3.15,<0.4.0)",
 ]
 
 
