--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "langgraph (>=0.3.33,<0.4.0)",
     "langchain (>=0.3.24,<0.4.0)",
     "langchain-anthropic (>=0.3.15,<0.4.0)",
+    "boto3 (>=1.38.34,<2.0.0)",
 ]
 
 
