--- a/.github/workflows/frontend-destroy.yml
+++ b/.github/workflows/frontend-destroy.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
 
       - run: terraform init -backend-config=backend-dev.conf -reconfigure
-        working-directory: src/frontend/terraform
+        working-directory: src/loregen/frontend/terraform
 
       - run: terraform plan
-        working-directory: src/frontend/terraform
+        working-directory: src/loregen/frontend/terraform
 
       - run: terraform destroy -auto-approve
-        working-directory: src/frontend/terraform
+        working-directory: src/loregen/frontend/terraform
