--- a/.github/workflows/frontend-apply.yml
+++ b/.github/workflows/frontend-apply.yml
@@ -2,6 +2,9 @@ name: Frontend terraform - apply
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 10 * * *'  # 10:00 UTC = 12:00 Europe/Warsaw (CET/CEST)
+
 
 jobs:
   terraform:
