--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langchain (>=0.3.24,<0.4.0)",
     "langchain-anthropic (>=0.3.15,<0.4.0)",
     "boto3 (>=1.38.34,<2.0.0)",
+    "langchain-openai (>=0.3.24,<0.4.0)",
 ]
 
 
