--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "langchain-anthropic (>=0.3.15,<0.4.0)",
     "boto3 (>=1.38.34,<2.0.0)",
     "langchain-openai (>=0.3.24,<0.4.0)",
+    "loregen-common (>=0.1.2,<0.2.0)",
 ]
 
 
